added ble app telemetry

--- a/H8mini_test/Project.uvprojx
+++ b/H8mini_test/Project.uvprojx
@@ -555,6 +555,11 @@
               <FilePath>.\src\rx_bayang_ble.c</FilePath>
             </File>
             <File>
+              <FileName>rx_bayang_ble_app.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\rx_bayang_ble_app.c</FilePath>
+            </File>
+            <File>
               <FileName>sixaxis.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\src\sixaxis.c</FilePath>
