--- a/H8mini_test/Project.uvprojx
+++ b/H8mini_test/Project.uvprojx
@@ -699,6 +699,11 @@
               <FileType>1</FileType>
               <FilePath>.\src\drv_rgb.c</FilePath>
             </File>
+            <File>
+              <FileName>drv_servo.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\drv_servo.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
