revert of pwm driver to fix openocd issue
previous driver caused full motors after flashing with openocd 10 ( gcc
)

--- a/H8mini_test/Project.uvprojx
+++ b/H8mini_test/Project.uvprojx
@@ -655,6 +655,11 @@
               <FilePath>.\src\drv_pwm.c</FilePath>
             </File>
             <File>
+              <FileName>drv_pwm_new.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\drv_pwm_new.c</FilePath>
+            </File>
+            <File>
               <FileName>drv_dshot.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\src\drv_dshot.c</FilePath>
